5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1685_2471.log
== TEST (2019-05-13 18:09:15) 
-- CODE:
i = int(input())
if(i>3):
	print("maaior")
	elif(i<0)
	print("menor")
-- ERROR:
File "XXXX", line 4
    elif(i<0)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:09:26) 
-- CODE:
i = int(input())
if(i>3):
	print("maaior")
elif(i<0)
	print("menor")
-- ERROR:
File "XXXX", line 4
    elif(i<0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:09:32) 
-- CODE:
i = int(input())
if(i>3):
	print("maaior")
elif(i<0):
	print("menor")
-- ERROR:
File "XXXX", line 4
    elif(i<0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:09:49) 
-- CODE:
i = int(input())
if(i>3):
	print("maaior")
elif(i<0):
	print("menor")
-- ERROR:
File "XXXX", line 4
    elif(i<0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:14:15) 
-- CODE:
idade = int(input())
imc = float(input())

if(idade <45):
	if(imc < 22.0):
		print("Baixo")
	elif(imc >=22.0):
		print("Medio")
elif(idade >= 45):
	if(imc < 22.0):
		print("Medio")
	elif(imc >=22.0):
		print("Alto")
-- EXECUTION TIME:
0.204247
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:19:15) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Risco")
	if(idade <45):
		if(imc < 22.0):
			print("Baixo")
		elif(imc >=22.0):
			print("Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Medio")
		elif(imc >=22.0):
			print("Alto")
else:
-- ERROR:
File "XXXX", line 17
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:19:23) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Risco")
	if(idade <45):
		if(imc < 22.0):
			print("Baixo")
		elif(imc >=22.0):
			print("Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Medio")
		elif(imc >=22.0):
			print("Alto")

-- ERROR:
File "XXXX", line 17
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:20:17) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")

-- ERROR:
File "XXXX", line 17
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:20:58) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
else:
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- EXECUTION TIME:
0.140315
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 e IMC 0.0
Dados Invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:21:14) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
else:
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- OUTPUT:
Entradas: 0 e IMC 0.0
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:22:28) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade > 130 or 0 > imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- EXECUTION TIME:
0.165511
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:23:09) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade or idade > 130 or 0 > imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- OUTPUT:
Entradas: 0 e IMC 0.0
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:23:13) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade or idade > 130 or 0 > imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- EXECUTION TIME:
0.158122
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:28:10) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 < idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade or idade > 130 or 0 > imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- EXECUTION TIME:
0.149011
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:28:38) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 <= idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade or idade > 130 or 0 > imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- EXECUTION TIME:
0.201818
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:29:27) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 <= idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade or idade > 130 or 0 >= imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- EXECUTION TIME:
0.152938
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 e IMC 0.0
Dados Invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:30:47) 
-- CODE:
idade = int(input())
imc = float(input())
if(0 <= idade < 130 and 0 < imc):
	print("Entradas:",idade,"e IMC",imc)
	
	if(idade <45):
		if(imc < 22.0):
			print("Risco: Baixo")
		elif(imc >=22.0):
			print("Risco: Medio")
	elif(idade >= 45):
		if(imc < 22.0):
			print("Risco: Medio")
		elif(imc >=22.0):
			print("Risco: Alto")
elif(0 > idade or idade > 130 or 0 >= imc):
	print("Entradas:",idade,"e IMC",imc)
	print("Dados Invalidos")
-- OUTPUT:
Entradas: 0 e IMC 0.0
Dados Invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
